--- a/restaurants/templates/navbar.html
+++ b/restaurants/templates/navbar.html
@@ -1,23 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'restaurant-list' %}">RestaurantHUB</a>
+  <a class="navbar-brand" href="{% url 'restaurant-list' %}">{{request.user}}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'restaurant-create' %}">Create Restaurant</a>
-      </li>
+      {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'signout' %}">Signout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'restaurant-create' %}">Create Restaurant</a>
+        </li>
+      {% else %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'signup' %}">Signup</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'signin' %}">Signin</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'signout' %}">Signout</a>
-      </li>
+      {% endif %}
     </ul>
     
     <form class="form-inline my-2 my-lg-0">
